--- a/cats-vs-dogs/reset.css
+++ b/cats-vs-dogs/reset.css
@@ -75,11 +75,16 @@ html[xmlns] .clearfix { display: block; }
 
 
 body {
-	width: 100%;
+	width: 40%;
+	margin: 0 auto;
 }
 
 header {
 	text-align: center;
+}
+
+h1 {
+	margin: 25px;
 }
 
 .links {
@@ -91,7 +96,7 @@ header {
 	font-size: 22px;
 	border-top: 3px solid black;
 	border-bottom: 3px solid black;
-	margin: 20px 0px;
+	margin: 0px 0px 20px 0px;
 }
 
 ol li {
@@ -116,21 +121,20 @@ section {
 .article {
 	float: left;
 	width: 320px;
-	margin: 10px;
-	text-align: left;
+	margin: 0px 10px 10px 10px;
 }
 
 footer {
 	clear: left;
 	width: 690px;
-	display: inline-block;
+	display: block;
 	font-size: 13px;
 	border-top: 3px solid black;
 }
 
 ul li {
+	display: inline;
 	float: left;
-	display: inline-block;
 	padding: 6px 20px;
 	margin: 0px 50px;
 }
