--- a/llama-love/style.css
+++ b/llama-love/style.css
@@ -53,3 +53,52 @@ table {
 /* -----------------END RESET---------------- */
 
 
+body {
+	width: 75%;
+	margin: 0 auto;
+}
+
+#main-content {
+	margin: 50px;
+}
+
+article {
+	float: left;
+	width: 500px;
+	margin: 10px;
+}
+
+p {
+	font-family: sans-serif;
+	font-size: 13px;
+	clear: right;
+	width: 490px;
+	line-height: 1.1em;
+}
+
+h1 {
+	font-family: sans-serif;
+	font-size: 20px;
+	font-weight: bold;
+	float: left;
+	width: 260px;
+}
+
+h3 {
+	float:left;
+	width: 200px;
+	margin: 0px 20px 20px 0px;
+}
+
+h2 {
+	font-family: sans-serif;
+	font-size: 11px;
+	color: #A3A3A3;
+	float: left;
+	width: 260px;
+	padding: 5px 0px 20px 0px;
+
+}
+
+
+
