--- a/robots/style.css
+++ b/robots/style.css
@@ -53,6 +53,11 @@ table {
 
 /*-------------------------------------------------------*/
 
+
+
+
+
+
 body {
 	margin: 0 auto;
 	width: 90%;
@@ -64,13 +69,22 @@ body {
 	background-color: beige;
 }
 
+header h1 {
+	margin-top: -15px;
+}
+
 #top-nav {
 	text-align: right;
-	text-decoration: none;
-	font-size: 12px;
 	font-family: sans-serif;
 	padding: 5px 20px 0px 0px;
 	color: SaddleBrown;
+	font-size: 12px;
+}
+
+#top-nav a {
+	text-decoration: none;
+	color: SaddleBrown;
+	padding: 10px;
 }
 
 .navigation {
@@ -89,8 +103,13 @@ body {
 	font-weight: bold;
 }
 
+#navigation {
+	background-color: red;
+	width:100%;
+}
+
 #page {
-	clear: left;
+	float: left;
 	width: 420px;
 }
 
@@ -125,6 +144,14 @@ body {
 	padding-right: 20%;
 }
 
+#sidebar {
+	float: left;
+	width: 25%;
+	margin-left: 22%;
+	margin-top: 45px;
+	margin-bottom: 5%;
+}
+
 #sidebar h1 {
 	font-size: 16px;
 	padding-top: 10px;
@@ -143,9 +170,13 @@ body {
 }
 
 #footer-wrapper {
+	clear: left;
 	padding-left: 20%;
 	padding-right: 20%;
 	background-color: SaddleBrown;	
+	float: left;
+	width: 60%;
+	padding-bottom: 20px;
 }
 
 #footer-wrapper h1 {
@@ -155,13 +186,29 @@ body {
 	text-transform: uppercase;
 	font-family: sans-serif;
 	font-weight: bold;
+	color: beige;
 }
 
 #footer-wrapper p {
 	font-size: 11.5px;
 	font-family: sans-serif;
+	line-height: 1.3em;
+	color: white;
 }
 
 #footer-follow a {
+	float: left;
+}
+
+#footer-follow {
+	margin-left: 75%;
+}
+
+#footer-follow h1 {
+	color: beige;
+}
+
+#footer-contact {
+	width: 150px;
 	float: left;
 }
