--- a/robots/style.css
+++ b/robots/style.css
@@ -58,6 +58,10 @@ table {
 
 
 
+
+
+
+
 body {
 	margin: 0 auto;
 	width: 90%;
@@ -78,7 +82,7 @@ header h1 {
 	font-family: sans-serif;
 	padding: 5px 20px 0px 0px;
 	color: SaddleBrown;
-	font-size: 12px;
+	font-size: 10px;
 }
 
 #top-nav a {
@@ -111,6 +115,7 @@ header h1 {
 #page {
 	float: left;
 	width: 420px;
+	padding-bottom: 5%;
 }
 
 #page h1 {
@@ -135,7 +140,7 @@ header h1 {
 #page p {
 	font-size: 11.5px;
 	padding-bottom: .75em;
-	line-height: 1.15em;
+	line-height: 1.45em;
 	font-family: sans-serif;
 }
 
@@ -169,6 +174,10 @@ header h1 {
 	text-decoration: none;
 }
 
+#sidebar li {
+	padding-bottom: 3px;
+}
+
 #footer-wrapper {
 	clear: left;
 	padding-left: 20%;
@@ -181,7 +190,7 @@ header h1 {
 
 #footer-wrapper h1 {
 	font-size: 16px;
-	padding-top: 10px;
+	padding-top: 15px;
 	padding-bottom: 10px;
 	text-transform: uppercase;
 	font-family: sans-serif;
