--- a/robots/style.css
+++ b/robots/style.css
@@ -119,7 +119,7 @@ header h1 {
 }
 
 #page h1 {
-	font-size: 30px;
+	font-size: 35px;
 	padding-top: 50px;
 	text-transform: uppercase;
 	font-family: sans-serif;
@@ -128,7 +128,7 @@ header h1 {
 }
 
 #page h2 {
-	font-size: 16px;
+	font-size: 17px;
 	padding-top: 10px;
 	padding-bottom: 10px;
 	text-transform: uppercase;
@@ -147,18 +147,19 @@ header h1 {
 .everything {
 	padding-left: 20%;
 	padding-right: 20%;
+	padding-top: 50px;
 }
 
 #sidebar {
 	float: left;
 	width: 25%;
 	margin-left: 22%;
-	margin-top: 45px;
+	margin-top: 70px;
 	margin-bottom: 5%;
 }
 
 #sidebar h1 {
-	font-size: 16px;
+	font-size: 17px;
 	padding-top: 10px;
 	padding-bottom: 10px;
 	text-transform: uppercase;
@@ -201,7 +202,7 @@ header h1 {
 #footer-wrapper p {
 	font-size: 11.5px;
 	font-family: sans-serif;
-	line-height: 1.3em;
+	line-height: 1.6em;
 	color: white;
 }
 
