--- a/robots/style.css
+++ b/robots/style.css
@@ -97,7 +97,6 @@ header h1 {
 }
 
 .navigation a {
-	display: inline-block;
 	float: left;
 	padding: 10px 30px 0px 0px;
 	text-transform: uppercase;
@@ -105,11 +104,14 @@ header h1 {
 	font-size: 13px;
 	font-family: sans-serif;
 	font-weight: bold;
+	padding-bottom: 8px;
+	color: white;
 }
 
 #navigation {
-	background-color: red;
-	width:100%;
+	background-color: SaddleBrown;
+	width: 100%;
+	height: 35px; 
 }
 
 #page {
@@ -147,7 +149,7 @@ header h1 {
 .everything {
 	padding-left: 20%;
 	padding-right: 20%;
-	padding-top: 50px;
+	padding-top: 25px;
 }
 
 #sidebar {
