--- a/cats-vs-dogs/reset.css
+++ b/cats-vs-dogs/reset.css
@@ -102,7 +102,17 @@ h1 {
 ol li {
 	float: left;
 	display: inline-block;
-	margin: 6px 20px 3px 30px;
+	margin: 6px 0px 3px 10px;
+}
+
+#photos {
+	padding: 0px 10px 0px 0px;
+}
+
+#nav {
+	width: 690px;
+	text-align: center;
+	padding: 0px 30px;
 }
 
 h2 {
