--- a/final/final.css
+++ b/final/final.css
@@ -54,8 +54,24 @@ table {
 
 
 
+
+@media screen and (max-width:2000px) {
+	.slogan h4 { display: inline-block; max-width: 100%; height: auto; }
+	.slogan h5 { display: none;}
+	}
+
+@media screen and (max-width:1020px) {
+	.slogan h4 { display: none; }
+	.slogan h5 { display: inline-block; max-width: 100%; height: auto; }
+	}
+
+@media screen and (max-width:485px) {
+	.slogan h4 { display: none; }
+	.slogan h5 { display: inline-block; max-width: 100%; height: auto; }
+	}
+		
 @font-face {
-	font-family: light;
+	font-family: bold;
 	src: url("Font/Nexa Bold.otf");
 }
 
@@ -64,64 +80,64 @@ table {
 	src: url("Font/Archer-LightItal-Pro.otf");
 }
 
-header {
-	background-color: #ffffff;
-	height: 10%;
+body {
+	background-color: #F1F1F1;
 }
 
 .logo {
-	padding-bottom: 35px;
-	height: 225px;
-	width: 225px;
-	margin-top: 100px;
-	margin-left: 10%;
+	padding-bottom: 10px;
+	height: 95px;
+	width: 135px;
+	margin-top: 40px;
+	margin-left: 6%;
 	float: left;
-	border-right: 1px solid #E1E1E1;
-	height: 100%;
+	border-right: 1px solid #D1D1D1;
 }
 
 .title {
 	float: left;
-	margin-top: 220px;
-	margin-left: 37px;
+	margin-top: 78px;
+	margin-left: 45px;
 }
 
-h1 {
+.logo h1 {
 	display: inline-block;
 	float: left;
 }
 
-h2 {
+.title h2 {
 	float: left;
 	text-decoration: none;
-	font-family: light;
-	font-size: 1em;
+	font-family: bold;
+	font-size: .85em;
 	color: #4B4B4B;
 	text-transform: uppercase;
     margin: 5px 30px 5px 0px;
+	letter-spacing: .05em;
 }
 
-h3 {
+.title h3 {
 	float: left;
 	text-decoration: none;
-	font-family: light;
-	font-size: 1em;
+	font-family: bold;
+	font-size: .85em;
 	color: #4B4B4B;
 	text-transform: uppercase;
     margin: 5px 30px 5px 5px;
+	letter-spacing: .05em;
 }
 
 h5 {
 	font-family: archIt;
-	font-size: 1.2em;
+	font-size: 1em;
 	float: left;
 }
 
 h6 {
 	font-family: archIt;
-	font-size: 1.2em;
+	font-size: 1em;
 	float: left;
-	padding: 0px 0px 0px 89px;
+	padding: 0px 0px 0px 94px;
 }
 
 
@@ -145,11 +161,58 @@ a:active {
 	color: #00C07A;
 }
 
+.slogan {
+	margin-left: 3.5%;
+	margin-right: 6%;
+}
+
+.slogan h4 img {
+	max-width: 100%;
+	height: auto;
+	padding-top: 35px;
+	padding-bottom: 20px;
+	display: inline-block;
+}
+
+.slogan h5 img {
+	display: inline-block;
+	max-width: 100%;
+	height: auto;
+	padding-bottom: 20px;
+}
+
 section {
 	clear: left;
 }
 
-.images {
-	background-color: #E1E1E1;
+footer {
+	background-color: #00C07A;
+	overflow: hidden;
+	clear: left;
+}
+
+footer p {
+	font-family: bold;
+	font-size: 1.2em;
+	color: #ffffff;
+	text-transform: uppercase;
+	padding-top: 25px;
+	padding-left: 7%;
+	padding-bottom: 20px;
+	letter-spacing: .08em;
+}
+
+footer nav {
+	float: right;
+	margin-top: -40px;
+	font-family: archIt;
+	font-size: 1em;
+	color: #ffffff;
+	margin-right: 7%;
+}
+
+footer li {
+	float: left;
+	padding: 0px 30px 0px 0px;
 }
 
