--- a/final/about.css
+++ b/final/about.css
@@ -177,6 +177,7 @@ h5 {
 	font-family: archIt;
 	font-size: .95em;
 	float: left;
+	margin-bottom: 5px;
 }
 
 h6 {
@@ -184,6 +185,15 @@ h6 {
 	font-size: .95em;
 	float: left;
 	padding: 0px 0px 0px 90px;
+}
+
+.nav h4 {
+	clear: left;
+	margin-top: 10px;
+	width: 80px;
+	height: 2px;
+	background-color: #00C07A;
+	overflow: hidden;
 }
 
 
