--- a/final/about.css
+++ b/final/about.css
@@ -228,6 +228,11 @@ section {
 	height: auto;
 	float: left;
 	padding-right: 20px;
+    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */
+    filter: gray; /* IE6-9 */
+   -webkit-filter: grayscale(100%); /* Chrome 19+, Safari 6+, Safari 6+ iOS */
+   opacity: 0.9;
+   filter: alpha(opacity=90); /* For IE8 and earlier */
 }
 
 .images {
@@ -242,6 +247,11 @@ section {
 	height: auto;
 	float: left;
 	padding-right: 20px;
+    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */
+    filter: gray; /* IE6-9 */
+   -webkit-filter: grayscale(100%); /* Chrome 19+, Safari 6+, Safari 6+ iOS */
+   opacity: 0.9;
+   filter: alpha(opacity=90); /* For IE8 and earlier */
 }
 
 .images2 {
@@ -251,23 +261,28 @@ section {
 }
 
 .images3 img {
-	padding-bottom: 20px;
+	padding-bottom: 5px;
 	max-width: 95%;
 	height: auto;
 	float: left;
 	padding-right: 20px;
+    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */
+    filter: gray; /* IE6-9 */
+   -webkit-filter: grayscale(100%); /* Chrome 19+, Safari 6+, Safari 6+ iOS */
+   opacity: 0.9;
+   filter: alpha(opacity=90); /* For IE8 and earlier */
 }
 
 .images3 {
 	padding-bottom: 20px;
-	margin-left: 7%;
+	margin-left: 9%;
 	margin-right: 7%;
 }
 
 .bio {
-	margin-left: 7%;
-	margin-right: 10%;
-	background-color: #ffffff;
+	margin-left: 4%;
+	margin-right: 6%;
+	/*background-color: #ffffff;*/
 	overflow: hidden;
 	width: 0 auto;
 }
@@ -294,10 +309,10 @@ section {
 }
 
 .bio2 {
-	background-color: #ffffff;
+	/*background-color: #ffffff;*/
 	margin-top: -15px;
-	margin-left: 7%;
-	margin-right: 10%;
+	margin-left: 4%;
+	margin-right: 6%;
 	margin-bottom: 40px;
 	overflow: hidden;
 }
