--- a/cats-vs-dogs/reset.css
+++ b/cats-vs-dogs/reset.css
@@ -74,45 +74,63 @@ html[xmlns] .clearfix { display: block; }
 * html .clearfix { height: 1%; }
 
 
+
+
+@media screen and (max-width:1270px) {
+	.links { display: none; }
+
+}
+
+
+@font-face {
+	font-family: univers;
+	src: url("fonts/UniversLTStd-BoldCn.otf");
+}
+
+
+
 body {
-	width: 80%;
 	margin: 0 auto;
 }
 
-header {
+
+h1 {
 	text-align: center;
 }
 
-h1 {
-	margin: 25px;
+h1 p {
+	margin-top: 50px;
+	margin-bottom: 25px;
+	font-family: univers;
+	font-size: 5em;
+	text-transform: uppercase;
 }
 
 .links {
-	width: 690px;
+	width: 100%;
 	display: inline-block;
+	border-top: 3px solid black;
+	border-bottom: 3px solid black;
+	margin-bottom: 25px;
+	padding-top: 8px;
+	padding-bottom: 5px;
+}
+
+#nav li {
+	float: left;
+	display: inline-block;
+	padding-left: 5px;
+	padding-right: 5px;
+	margin-left: 1%;
+	margin-right: 1%;
 	font-family: serif;
 	text-transform: uppercase;
 	font-weight: bold;
 	font-size: 22px;
-	border-top: 3px solid black;
-	border-bottom: 3px solid black;
-	margin: 0px 0px 20px 0px;
-}
-
-ol li {
-	float: left;
-	display: inline-block;
-	margin: 6px 0px 3px 10px;
 }
 
 #photos {
 	padding: 0px 10px 0px 0px;
-}
-
-#nav {
-	width: 690px;
-	text-align: center;
-	padding: 0px 30px;
 }
 
 h2 {
@@ -124,28 +142,28 @@ h2 {
 }
 
 section {
-	margin: 0 auto;
-	width: 690px;
+	width: 100%
 }
 
 .article {
 	float: left;
-	width: 320px;
+	width: 40%;
 	margin: 0px 10px 10px 10px;
 }
 
 footer {
-	margin: 0 auto;
 	clear: left;
-	width: 690px;
-	font-size: 13px;
-	border-top: 3px solid black;
 }
 
-ul li {
-	display: inline;
-	float: left;
-	padding: 6px 20px;
-	margin: 0px 50px;
+.foot {
+	display: inline-block;
+	width: 100%;
+	font-size: 13px;
+	border-top: 3px solid black;
+	margin-top: 25px;
+}
+
+#foot {
+
 }
 
