--- a/final/pages.css
+++ b/final/pages.css
@@ -75,6 +75,7 @@ table {
 	#stills3 { display: none; }
 	#stills4 { display: none; }
 	#stills5 { display: none; }
+	#stills6 { display: none; }
 	#photos { display: none; }
 	#photos3 { display: block; }
 	#photos2 { display: none; }
@@ -434,6 +435,17 @@ section {
 }
 
 #stills5 {
+	float: left;
+	width: 20%;
+	padding-left: 4%;
+	padding-right: 7%;
+	padding-top: 35px;
+	padding-bottom: 15px;
+	margin-top: 30px;
+	margin-bottom: 45px;
+}
+
+#stills6 {
 	float: left;
 	width: 20%;
 	padding-left: 4%;
