--- a/final/pages.css
+++ b/final/pages.css
@@ -65,6 +65,7 @@ table {
 	.video-container2 { display: none; }
 	#paragraphs2 { display: none; }
 	.video-container { display: block; }
+	.buttons2 { display: none; }
 	}
 
 @media screen and (max-width:1370px) {
@@ -83,7 +84,13 @@ table {
 	.video-container2 iframe { display: block; }
 	.video-container2 { display: block; }
 	#paragraphs2 { display: block; }
+	.buttons2 { display: none; }
 	}
+	
+@media screen and (max-width: 900px) {
+	.buttons img { display: none; }
+	.buttons2 { display: block; }
+}
 
 @media screen and (max-width:630px) {
 	#bottomnav ul { float: none; }
@@ -210,6 +217,34 @@ a:active {
 #header {
 	height: 125px;
 	padding-bottom: 70px;
+}
+
+
+.buttons {
+	position: absolute;
+	right: 7%;
+	top: 140px;
+}
+
+.buttons img:hover {
+    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */
+    filter: gray; /* IE6-9 */
+   -webkit-filter: grayscale(100%); /* Chrome 19+, Safari 6+, Safari 6+ iOS */
+    opacity: 0.4;
+    filter: alpha(opacity=40); /* For IE8 and earlier */
+}
+
+.buttons2 {
+	text-align: center;
+	margin-bottom: 45px;
+}
+
+.buttons2 img:hover {
+    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */
+    filter: gray; /* IE6-9 */
+   -webkit-filter: grayscale(100%); /* Chrome 19+, Safari 6+, Safari 6+ iOS */
+    opacity: 0.4;
+    filter: alpha(opacity=40); /* For IE8 and earlier */
 }
 
 section {
