--- a/final/work.css
+++ b/final/work.css
@@ -55,34 +55,34 @@ table {
 
 
 @media screen and (max-width:2000px) {
-	.images3 { display: none; }
-	.images2 { display: none; }	
+	#images3 { display: none; }
+	#images2 { display: none; }	
 	.logo h2 img { display: none; }
 	#smallnav ul li { display: none; }
 	}
 
 @media screen and (max-width:1270px) {
-	.images3 { display: none; }
-	.images2 { display: block; }
-	.images { display: none; }
+	#images3 { display: none; }
+	#images2 { display: block; }
+	#images { display: none; }
 	}
 
 @media screen and (max-width:630px) {
-	.images3 { display: none; }
-	.images img { display: none; }
+	#images3 { display: none; }
+	#images img { display: none; }
 	#bottomnav ul { float: none; }
 	.contact p { display: none; }
 	#smallnav ul li { display: none; }
 	}
 	
 @media screen and (max-width:1000px) {
-	.images2 { display: none; }
-	.images3 { display: block; }
+	#images2 { display: none; }
+	#images3 { display: block; }
 	}
 		
 @media screen and (max-width:485px) {
-	.images3 { display: block; }
-	.images2 { display: none; }
+	#images3 { display: block; }
+	#images2 { display: none; }
 	.images img { display: none; }
 	.logo h2 img { display: inline-block; }
 	.logo h1 img { display: none; }
@@ -201,16 +201,12 @@ a:active {
 
 section {
 	clear: left;
-	padding-top: 45px;
+	padding-top: 25px;
 }
 
-.images img {
-	max-width: 31.5%;
+#images img {
+	max-width: 100%;
 	height: auto;
-	float: left;
-	margin-right: 20px;
-	padding-bottom: 15px;
-	margin-bottom: 30px;
     filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */
     filter: gray; /* IE6-9 */
    -webkit-filter: grayscale(100%); /* Chrome 19+, Safari 6+, Safari 6+ iOS */
@@ -218,7 +214,7 @@ section {
     filter: alpha(opacity=90); /* For IE8 and earlier */
 }
 
-.images img:hover {
+#images img:hover {
     filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */
     filter: none; /* IE6-9 */
    -webkit-filter: grayscale(0%); /* Chrome 19+, Safari 6+, Safari 6+ iOS */
@@ -226,18 +222,16 @@ section {
     filter: alpha(opacity=100); /* For IE8 and earlier */
 }
 
-.images {
-	padding-bottom: 20px;
+#images {
+	margin-bottom: 50px;
 	margin-left: 7%;
 	margin-right: 7%;
+	float: left;
 }
 
-.images2 img {
-	max-width: 47.5%;
+#images2 img {
+	max-width: 100%;
 	height: auto;
-	float: left;
-	padding-right: 20px;
-	padding-bottom: 45px;
     filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */
     filter: gray; /* IE6-9 */
    -webkit-filter: grayscale(100%); /* Chrome 19+, Safari 6+, Safari 6+ iOS */
@@ -246,7 +240,7 @@ section {
     filter: alpha(opacity=90); /* For IE8 and earlier */
 }
 
-.images2 img:hover {
+#images2 img:hover {
     filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */
     filter: none; /* IE6-9 */
    -webkit-filter: grayscale(0%); /* Chrome 19+, Safari 6+, Safari 6+ iOS */
@@ -255,18 +249,16 @@ section {
     filter: alpha(opacity=100); /* For IE8 and earlier */
 }
 
-.images2 {
-	padding-bottom: 20px;
+#images2 {
+	margin-bottom: 50px;
 	margin-left: 7%;
-	margin-right: 7%;
+	margin-right: 5%;
 }
 
-.images3 img {
-	max-width: 95%;
+#images3 img {
+	max-width: 100%;
 	height: auto;
 	float: left;
-	padding-right: 20px;
-	padding-bottom: 30px;
     filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */
     filter: gray; /* IE6-9 */
    -webkit-filter: grayscale(100%); /* Chrome 19+, Safari 6+, Safari 6+ iOS */
@@ -275,7 +267,7 @@ section {
     filter: alpha(opacity=90); /* For IE8 and earlier */
 }
 
-.images3 img:hover {
+#images3 img:hover {
     filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */
     filter: none; /* IE6-9 */
    -webkit-filter: grayscale(0%); /* Chrome 19+, Safari 6+, Safari 6+ iOS */
@@ -284,7 +276,7 @@ section {
     filter: alpha(opacity=100); /* For IE8 and earlier */
 }
 
-.images3 {
+#images3 {
 	padding-bottom: 20px;
 	margin-left: 7%;
 	margin-right: 7%;
@@ -339,5 +331,34 @@ footer p {
 	margin-left: 7%;
 }
 
+#parent {
+	float: left;
+	width: 31%;
+	padding: 1% 1% 0% 1%	
+}
 
+#parent2 {
+	float: left;
+	width: 47%;
+	padding: 1%;
+}
+
+#parent3 {
+	float: left;
+	width: 95%;
+	padding: 1%;
+}
+
+.is_responsive {
+	height: auto;
+}
+
+.is_responsive2 {
+	height: auto;
+}
+
+.is_responsive3 {
+	height: auto;
+	margin-bottom: 50px;
+}
 
