--- a/final/final.css
+++ b/final/final.css
@@ -54,7 +54,7 @@ table {
 
 
 @media only screen and (max-width:320px) {
-	.logo a img { max-width: 100%; }
+	.logo h1 img { max-width: 100%; }
 	.title h2 { font-size: 16px; }
 	.title h3 { font-size: 16px; }
 	.nav h5 a { font-size: 16px; }
