--- a/final/final.css
+++ b/final/final.css
@@ -53,8 +53,8 @@ table {
 /*-------------------------------------------------------*/
 
 
-@media handheld and (max-width: 500px) {
-	.logo h1 img { max-width: 100%; }
+@media handheld and (max-width: 1000px) {
+	/*.logo h1 img { max-width: 100%; }
 	.title h2 { font-size: 16px; }
 	.title h3 { font-size: 16px; }
 	.nav h5 a { font-size: 16px; }
@@ -65,7 +65,9 @@ table {
 	.logo h1 img { display: none; }
 	#bottomnav ul li { display: none; }
 	#smallnav ul li {display: block; }
-	.contact p { display: none; }
+	.contact p { display: none; }*/
+	.logo h1 img { display: none; }
+	.logo h2 img { display: none; }
 }
 
 @media screen and (max-width:2000px) {
