--- a/final/final.css
+++ b/final/final.css
@@ -55,11 +55,8 @@ table {
 @media screen and (device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) {
 	.slogan h4 { display: none; }
 	.slogan h5 { display: inline-block; max-width: 100%; height: auto; }
-	.logo h2 img { display: block; }
-	.logo h1 img { display: none; }
-	#bottomnav ul li { display: none; }
-	#smallnav ul li {display: block; }
-	.contact p { display: none; }
+	.logo h2 img { display: none; }
+	#smallnav ul li { display: none; }
 }
 
 @media screen and (max-width:2000px) {
