--- a/final/final.css
+++ b/final/final.css
@@ -56,6 +56,7 @@ table {
 	.slogan h4 { display: none; }
 	.slogan h5 { display: inline-block; max-width: 100%; height: auto; }
 	.logo h2 img { display: none; }
+	.logo h1 a img { width: 300px; }
 	#smallnav ul li { display: none; }
 }
 
