--- a/final/final.css
+++ b/final/final.css
@@ -56,7 +56,8 @@ table {
 	.slogan h4 { display: none; }
 	.slogan h5 { display: inline-block; max-width: 100%; height: auto; }
 	.logo h2 img { display: none; }
-	.logo h1 a img { width: 300px; }
+	.logo h1 img { display: none; }
+	.logo h3 img { display: inline-block; }
 	#smallnav ul li { display: none; }
 }
 
@@ -65,6 +66,7 @@ table {
 	.slogan h5 { display: none; }
 	.logo h2 img { display: none; }
 	#smallnav ul li { display: none; }
+	.logo h3 img { display: none; }
 	}
 
 @media screen and (max-width:1020px) {
@@ -72,12 +74,14 @@ table {
 	.slogan h5 { display: inline-block; max-width: 100%; height: auto; }
 	.logo h2 img { display: none; }
 	#smallnav ul li { display: none; }
+	.logo h3 img { display: none; }
 	}
 
 @media screen and (max-width:630px) {
 	#bottomnav ul { float: none; }
 	.contact p { display: none; }
 	#smallnav ul li { display: none; }
+	.logo h3 img { display: none; }
 	}
 	
 @media screen and (max-width:485px) {
@@ -88,6 +92,7 @@ table {
 	#bottomnav ul li { display: none; }
 	#smallnav ul li {display: block; }
 	.contact p { display: none; }
+	.logo h3 img { display: none; }
 	}
 		
 @font-face {
