--- a/final/final.css
+++ b/final/final.css
@@ -65,8 +65,9 @@ table {
 	.slogan h4 { display: inline-block; max-width: 100%; height: auto; }
 	.slogan h5 { display: none; }
 	.logo h2 img { display: none; }
+	.logo h1 img { display: none; }
 	#smallnav ul li { display: none; }
-	.logo h3 img { display: none; }
+	.logo h3 img { display: inline-block; }
 	}
 
 @media screen and (max-width:1020px) {
