--- a/final/final.css
+++ b/final/final.css
@@ -57,6 +57,7 @@ table {
 	.slogan h5 { display: inline-block; max-width: 100%; height: auto; }
 	.logo h2 a img { display: none; }
 	.logo h1 a img { display: none; }
+	.logo { border-right: 0px; }
 	.logo2 h3 a img { display: inline-block; }
 	#smallnav ul li { display: none; }
 }
@@ -121,13 +122,13 @@ body {
 }
 
 .logo2 {
-	height: 300px;
+	height: 500px;
 	padding-bottom: 10px;
 	width: 135px;
 	margin-top: 40px;
 	margin-left: 6%;
 	float: left;
-	border-right: 1px solid #D1D1D1;
+	border-right: 0px;
 }
 
 .logo2 h3 {
